# 3-Vibration-Control

./: .gitignore  IMPLEMENTATION_GUIDE.md  README.md  pyproject.toml
docs/: code_architecture.md  level1_rigid_body_dynamics.md  physical_validation.md  training_addendum.md
habitat_sim/: __init__.py  config.py
habitat_sim/actuators/: motor.py  tank_system.py
habitat_sim/control/: sac_agent.py  training.py
habitat_sim/core/: inertia.py  integrator.py  quaternion.py
habitat_sim/database/: queries.py  recorder.py  schema.py
habitat_sim/disturbances/: mass_schedule.py  scenario.py  stochastic.py
habitat_sim/dynamics/: base.py  rigid_body.py
habitat_sim/environment/: habitat_env.py
habitat_sim/geometry/: base.py  cylinder.py  toroid.py
habitat_sim/scripts/: __init__.py  analyse_experiment.py  run_simulation.py  train_agent.py
habitat_sim/sensors/: accelerometer.py  mass_tracker.py  sensor_suite.py  strain_gauge.py
habitat_sim/simulation/: engine.py  monitors.py  state.py
habitat_sim/visualization/: __init__.py  scene_3d.py
scripts/: quick_sim.py
tests/: test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_phase6.py  test_viz.py
